--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SecureVault - Password Manager</title>
+    <title>TessySecureVault - Password Manager</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -15,7 +15,7 @@
     <!-- Login Screen -->
     <div id="loginScreen" class="login-container">
         <div class="logo">
-            <h1>SecureVault</h1>
+            <h1>TessySecureVault</h1>
             <p class="text-muted">Your secure password manager</p>
         </div>
         <form id="loginForm">
@@ -44,7 +44,7 @@
     <!-- Register Screen -->
     <div id="registerScreen" class="login-container" style="display: none;">
         <div class="logo">
-            <h1>SecureVault</h1>
+            <h1>TessySecureVault</h1>
             <p class="text-muted">Create your secure vault</p>
         </div>
         <form id="registerForm">
