--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div id="mainApp" class="app-container" style="display: none;">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div class="d-flex align-items-center">
-                <h1 class="mb-0 me-3">SecureVault</h1>
+                <h1 class="mb-0 me-3">TessySecureVault</h1>
                 <span class="badge bg-primary">PRO</span>
             </div>
             <div class="d-flex align-items-center">
